--- a/app/src/main/res/layout/activity_normal_game4.xml
+++ b/app/src/main/res/layout/activity_normal_game4.xml
@@ -75,20 +75,21 @@
         android:layout_marginRight="20dp"
         android:layout_weight="0"
         android:orientation="horizontal">
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <FrameLayout
             android:layout_width="70dp"
             android:layout_height="80dp"
             android:layout_marginRight="10dp"
             android:layout_weight="1">
-        <ImageButton
-            android:id="@+id/imageButtonNormalCorrect1"
-            android:layout_width="70dp"
-            android:layout_height="80dp"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/light"/>
+
+            <ImageButton
+                android:id="@+id/imageButtonNormalCorrect1"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/light" />
             <ImageView
                 android:id="@+id/correctImg1"
                 android:layout_width="match_parent"
@@ -97,20 +98,21 @@
                 android:src="@drawable/correct"
                 android:visibility="invisible" />
         </FrameLayout>
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <FrameLayout
             android:layout_width="70dp"
             android:layout_height="80dp"
             android:layout_marginRight="10dp"
             android:layout_weight="1">
-        <ImageButton
-            android:id="@+id/imageButtonNormalWrong1"
-            android:layout_width="70dp"
-            android:layout_height="80dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/rose" />
+
+            <ImageButton
+                android:id="@+id/imageButtonNormalWrong1"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/rose" />
 
             <ImageView
                 android:id="@+id/wrongImg1"
@@ -121,20 +123,21 @@
                 android:visibility="invisible" />
         </FrameLayout>
 
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <FrameLayout
             android:layout_width="70dp"
             android:layout_height="80dp"
             android:layout_marginRight="10dp"
             android:layout_weight="1">
-        <ImageButton
-            android:id="@+id/imageButtonNormalWrong2"
-            android:layout_width="70dp"
-            android:layout_height="80dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/laksa" />
+
+            <ImageButton
+                android:id="@+id/imageButtonNormalWrong2"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/laksa" />
             <ImageView
                 android:id="@+id/wrongImg2"
                 android:layout_width="match_parent"
@@ -155,20 +158,20 @@
         android:layout_weight="0"
         android:orientation="horizontal">
         <FrameLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="70dp"
             android:layout_height="80dp"
             android:layout_marginRight="10dp"
             android:layout_weight="1">
-        <ImageButton
-            android:id="@+id/imageButtonNormalWrong3"
-            android:layout_width="70dp"
-            android:layout_height="80dp"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/idkwhatthis_1_" />
+
+            <ImageButton
+                android:id="@+id/imageButtonNormalWrong3"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/idkwhatthis_1_" />
             <ImageView
                 android:id="@+id/wrongImg3"
                 android:layout_width="match_parent"
@@ -179,20 +182,20 @@
         </FrameLayout>
 
         <FrameLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="70dp"
             android:layout_height="80dp"
             android:layout_marginRight="10dp"
             android:layout_weight="1">
-        <ImageButton
-            android:id="@+id/imageButtonNormalWrong4"
-            android:layout_width="70dp"
-            android:layout_height="80dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/orchid" />
+
+            <ImageButton
+                android:id="@+id/imageButtonNormalWrong4"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/orchid" />
             <ImageView
                 android:id="@+id/wrongImg4"
                 android:layout_width="match_parent"
@@ -203,20 +206,20 @@
         </FrameLayout>
 
         <FrameLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="70dp"
             android:layout_height="80dp"
             android:layout_marginRight="10dp"
             android:layout_weight="1">
-        <ImageButton
-            android:id="@+id/imageButtonNormalCorrect2"
-            android:layout_width="70dp"
-            android:layout_height="80dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/dial_up_telephone" />
+
+            <ImageButton
+                android:id="@+id/imageButtonNormalCorrect2"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/dial_up_telephone" />
             <ImageView
                 android:id="@+id/correctImg2"
                 android:layout_width="match_parent"
@@ -239,20 +242,20 @@
         android:orientation="horizontal">
 
         <FrameLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="70dp"
             android:layout_height="80dp"
             android:layout_marginRight="10dp"
             android:layout_weight="1">
-        <ImageButton
-            android:id="@+id/imageButtonNormalWrong5"
-            android:layout_width="70dp"
-            android:layout_height="80dp"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/grounder" />
+
+            <ImageButton
+                android:id="@+id/imageButtonNormalWrong5"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/grounder" />
             <ImageView
                 android:id="@+id/wrongImg5"
                 android:layout_width="match_parent"
@@ -262,20 +265,20 @@
                 android:visibility="invisible"/>
         </FrameLayout>
         <FrameLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="70dp"
             android:layout_height="80dp"
             android:layout_marginRight="10dp"
             android:layout_weight="1">
-        <ImageButton
-            android:id="@+id/imageButtonNormalCorrect3"
-            android:layout_width="70dp"
-            android:layout_height="80dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/alarm_clock" />
+
+            <ImageButton
+                android:id="@+id/imageButtonNormalCorrect3"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/alarm_clock" />
             <ImageView
                 android:id="@+id/correctImg3"
                 android:layout_width="match_parent"
@@ -286,21 +289,20 @@
         </FrameLayout>
 
         <FrameLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="70dp"
             android:layout_height="80dp"
             android:layout_marginRight="10dp"
             android:layout_weight="1">
 
-        <ImageButton
-            android:id="@+id/imageButtonNormalWrong6"
-            android:layout_width="70dp"
-            android:layout_height="80dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/snacks" />
+            <ImageButton
+                android:id="@+id/imageButtonNormalWrong6"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/snacks" />
         <ImageView
             android:id="@+id/wrongImg6"
             android:layout_width="match_parent"
