--- a/app/src/main/res/layout/activity_normal_game5.xml
+++ b/app/src/main/res/layout/activity_normal_game5.xml
@@ -76,20 +76,21 @@
         android:layout_weight="0"
         android:orientation="horizontal">
 
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <FrameLayout
             android:layout_width="70dp"
             android:layout_height="80dp"
             android:layout_marginRight="10dp"
             android:layout_weight="1">
-        <ImageButton
-            android:id="@+id/imageButtonNormalCorrect1"
-            android:layout_width="70dp"
-            android:layout_height="80dp"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/orchid"/>
+
+            <ImageButton
+                android:id="@+id/imageButtonNormalCorrect1"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/orchid" />
 
             <ImageView
                 android:id="@+id/correctImg1"
@@ -100,20 +101,21 @@
                 android:visibility="invisible" />
         </FrameLayout>
 
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <FrameLayout
             android:layout_width="70dp"
             android:layout_height="80dp"
             android:layout_marginRight="10dp"
             android:layout_weight="1">
-        <ImageButton
-            android:id="@+id/imageButtonNormalWrong1"
-            android:layout_width="70dp"
-            android:layout_height="80dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/butterfly" />
+
+            <ImageButton
+                android:id="@+id/imageButtonNormalWrong1"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/butterfly" />
             <ImageView
                 android:id="@+id/wrongImg1"
                 android:layout_width="match_parent"
@@ -123,20 +125,21 @@
                 android:visibility="invisible" />
         </FrameLayout>
 
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <FrameLayout
             android:layout_width="70dp"
             android:layout_height="80dp"
             android:layout_marginRight="10dp"
             android:layout_weight="1">
-        <ImageButton
-            android:id="@+id/imageButtonNormalWrong2"
-            android:layout_width="70dp"
-            android:layout_height="80dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/ang_ku_kueh" />
+
+            <ImageButton
+                android:id="@+id/imageButtonNormalWrong2"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/ang_ku_kueh" />
             <ImageView
                 android:id="@+id/wrongImg2"
                 android:layout_width="match_parent"
@@ -159,20 +162,20 @@
         android:orientation="horizontal">
 
         <FrameLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="70dp"
             android:layout_height="80dp"
             android:layout_marginRight="10dp"
             android:layout_weight="1">
-        <ImageButton
-            android:id="@+id/imageButtonNormalWrong3"
-            android:layout_width="70dp"
-            android:layout_height="80dp"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/mosquito_coil" />
+
+            <ImageButton
+                android:id="@+id/imageButtonNormalWrong3"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/mosquito_coil" />
             <ImageView
                 android:id="@+id/wrongImg3"
                 android:layout_width="match_parent"
@@ -182,20 +185,20 @@
                 android:visibility="invisible"/>
         </FrameLayout>
         <FrameLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="70dp"
             android:layout_height="80dp"
             android:layout_marginRight="10dp"
             android:layout_weight="1">
-        <ImageButton
-            android:id="@+id/imageButtonNormalCorrect2"
-            android:layout_width="70dp"
-            android:layout_height="80dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/rose" />
+
+            <ImageButton
+                android:id="@+id/imageButtonNormalCorrect2"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/rose" />
             <ImageView
                 android:id="@+id/correctImg2"
                 android:layout_width="match_parent"
@@ -206,20 +209,20 @@
         </FrameLayout>
 
         <FrameLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="70dp"
             android:layout_height="80dp"
             android:layout_marginRight="10dp"
             android:layout_weight="1">
-        <ImageButton
-            android:id="@+id/imageButtonNormalWrong4"
-            android:layout_width="70dp"
-            android:layout_height="80dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/armchair" />
+
+            <ImageButton
+                android:id="@+id/imageButtonNormalWrong4"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/armchair" />
             <ImageView
                 android:id="@+id/wrongImg4"
                 android:layout_width="match_parent"
@@ -241,20 +244,20 @@
         android:orientation="horizontal">
 
         <FrameLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="70dp"
             android:layout_height="80dp"
             android:layout_marginRight="10dp"
             android:layout_weight="1">
-        <ImageButton
-            android:id="@+id/imageButtonNormalWrong5"
-            android:layout_width="70dp"
-            android:layout_height="80dp"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/radio" />
+
+            <ImageButton
+                android:id="@+id/imageButtonNormalWrong5"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/radio" />
             <ImageView
                 android:id="@+id/wrongImg5"
                 android:layout_width="match_parent"
@@ -265,20 +268,20 @@
         </FrameLayout>
 
         <FrameLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="70dp"
             android:layout_height="80dp"
             android:layout_marginRight="10dp"
             android:layout_weight="1">
-        <ImageButton
-            android:id="@+id/imageButtonNormalWrong6"
-            android:layout_width="70dp"
-            android:layout_height="80dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/food_cover" />
+
+            <ImageButton
+                android:id="@+id/imageButtonNormalWrong6"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/food_cover" />
             <ImageView
                 android:id="@+id/wrongImg6"
                 android:layout_width="match_parent"
@@ -289,20 +292,20 @@
         </FrameLayout>
 
         <FrameLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="70dp"
             android:layout_height="80dp"
             android:layout_marginRight="10dp"
             android:layout_weight="1">
-        <ImageButton
-            android:id="@+id/imageButtonNormalCorrect3"
-            android:layout_width="70dp"
-            android:layout_height="80dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/yellow_flower" />
+
+            <ImageButton
+                android:id="@+id/imageButtonNormalCorrect3"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/yellow_flower" />
             <ImageView
                 android:id="@+id/correctImg3"
                 android:layout_width="match_parent"
